--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Stocker - Stock Market Website Template</title>
+        <title>NextWave Technologies</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -387,7 +387,11 @@
                                 <i class="fas fa-chart-line fa-4x text-primary"></i>
                             </div>
                             <h4>Small Buissness</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <p class="mb-4">
+                                As a small business ourselves, we understand the challenges and needs of other small businesses. 
+                                That's why we're dedicated to providing personalized IT support and solutions to help you grow 
+                                and succeed. We're here to offer the same care and attention to your technology as we would our 
+                                own, ensuring that your business has the tools it needs to thrive.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -398,7 +402,11 @@
                                 <i class="fas fa-university fa-4x text-primary"></i>
                             </div>
                             <h4>Qualified Technitions</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <p class="mb-4">
+                                Our team is made up of qualified technicians with hands-on experience in the field. 
+                                Each member is passionate about IT and committed to delivering top-notch service. 
+                                With a strong desire to help businesses and individuals solve their tech challenges, 
+                                we bring both expertise and enthusiasm to every project we take on.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -409,7 +417,13 @@
                                 <i class="fas fa-file-alt fa-4x text-primary"></i>
                             </div>
                             <h4>Asset Management</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <p class="mb-4">
+                                We assist companies with asset management by helping you track and manage the phones, 
+                                computers, and other devices you provide to your employees. Our service includes inventory 
+                                tracking, device configuration, regular maintenance, and ensuring all assets are properly 
+                                secured and up-to-date. We help streamline the process, reduce the risk of loss or theft, 
+                                and ensure that your devices are always ready to support your team's productivity. Whether 
+                                you're managing a few devices or a large fleet, we make asset management simple and efficient.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -419,8 +433,15 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-hand-holding-usd fa-4x text-primary"></i>
                             </div>
-                            <h4>Scalable Solutions That Grow With Your Business </h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <h4>Scalable Solutions</h4>
+                            <p class="mb-4">
+                                We offer scalable IT solutions designed to grow with your business. Whether you're 
+                                a startup or an established company, we tailor our services to fit your current needs 
+                                and seamlessly expand as your business evolves. From network infrastructure and cloud 
+                                services to security and support, our flexible solutions can scale up or down to match 
+                                your growth, ensuring that your technology always supports your goals without overextending 
+                                your budget. With us, you can be confident that your IT will keep pace with your business, 
+                                no matter where you’re headed.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -468,7 +489,7 @@
                                         <img src="img/offer-1.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
-                                        <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
+                                        <h1 class="display-5 mb-4">Basic Monitoring and Protection Plan</h1>
                                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
@@ -481,7 +502,7 @@
                                         <img src="img/offer-2.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
-                                        <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
+                                        <h1 class="display-5 mb-4">Plus Monitoring and Protection Plan</h1>
                                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
@@ -494,7 +515,7 @@
                                         <img src="img/offer-3.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
-                                        <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
+                                        <h1 class="display-5 mb-4">Proffesional Monitoring and Protection Plan</h1>
                                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
@@ -507,7 +528,7 @@
                                         <img src="img/offer-4.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
-                                        <h1 class="display-5 mb-4">The stock market provides a venue...</h1>
+                                        <h1 class="display-5 mb-4">Complete Monitoring and Protection Plan</h1>
                                         <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
