--- a/index.html
+++ b/index.html
@@ -490,7 +490,9 @@
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Basic Monitoring and Protection Plan</h1>
-                                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
+                                        <p class="mb-4">
+                                            For just $9.99 per workstation, you’ll receive remote monitoring, antivirus protection, 
+                                            and access to our 24/7 email support line to submit tickets for any issues.
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                                     </div>
@@ -503,7 +505,10 @@
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Plus Monitoring and Protection Plan</h1>
-                                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
+                                        <p class="mb-4">
+                                            For $11.99 per workstation, you’ll get remote monitoring, antivirus protection, access to our 
+                                            24/7 email support line, plus free user additions and removals in your environment. This plan 
+                                            also includes either spam email filtering or phishing training to enhance your security.
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                                     </div>
@@ -516,7 +521,11 @@
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Proffesional Monitoring and Protection Plan</h1>
-                                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
+                                        <p class="mb-4">
+                                            For $14.99 per workstation, you’ll receive remote monitoring, antivirus protection, access to our 
+                                            24/7 email support line, free user additions and removals, and both spam email filtering and phishing 
+                                            training. This plan also includes quarterly security audits, with an on-site visit four times a year 
+                                            to ensure your systems are fully optimized and secure.
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                                     </div>
@@ -529,7 +538,13 @@
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Complete Monitoring and Protection Plan</h1>
-                                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis amet sequi molestiae tenetur eum mollitia, blanditiis, magnam illo magni error dolore unde perspiciatis tempore et totam corrupti dignissimos aut praesentium?
+                                        <p class="mb-4">
+                                            For $19.99 per workstation, you’ll get everything from our $14.99 plan—remote monitoring, 
+                                            antivirus protection, 24/7 email support, free user additions and removals, spam email filtering, 
+                                            and phishing training—plus monthly on-site visits to proactively manage and optimize your IT. 
+                                            This plan also includes quarterly security audits to ensure your systems remain secure and fully 
+                                            compliant. Additionally, all remote support is completely free, giving you peace of mind knowing 
+                                            help is just a call or click away.
                                         </p>
                                         <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                                     </div>
