--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             <div id="collapseOne" class="tab-pane fade show p-0 active">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-1.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="img/o1.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Basic Monitoring and Protection Plan</h1>
@@ -501,7 +501,7 @@
                             <div id="collapseTwo" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-2.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="img/o2.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Plus Monitoring and Protection Plan</h1>
@@ -517,7 +517,7 @@
                             <div id="collapseThree" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-3.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="img/o4.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Proffesional Monitoring and Protection Plan</h1>
@@ -534,7 +534,7 @@
                             <div id="collapseFour" class="tab-pane fade show p-0">
                                 <div class="row g-4">
                                     <div class="col-md-7">
-                                        <img src="img/offer-4.jpg" class="img-fluid w-100 rounded" alt="">
+                                        <img src="img/o5.jpg" class="img-fluid w-100 rounded" alt="">
                                     </div>
                                     <div class="col-md-5">
                                         <h1 class="display-5 mb-4">Complete Monitoring and Protection Plan</h1>
