--- a/about.html
+++ b/about.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Stocker - Stock Market Website Template</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="" name="keywords">
-        <meta content="" name="description">
+<head>
+    <meta charset="utf-8">
+    <title>NextWave Technologies</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 
-        <!-- Google Web Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> 
 
-        <!-- Icon Font Stylesheet -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Icon Font Stylesheet -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-        <!-- Libraries Stylesheet -->
-        <link href="lib/animate/animate.min.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-        <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <!-- Libraries Stylesheet -->
+    <link rel="stylesheet" href="lib/animate/animate.min.css"/>
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
 
-        <!-- Customized Bootstrap Stylesheet -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
 
     <body>
 
@@ -122,8 +122,12 @@
                     <div class="col-xl-7 wow fadeInLeft" data-wow-delay="0.2s">
                         <div>
                             <h4 class="text-primary">About Us</h4>
-                            <h1 class="display-5 mb-4">Meet our company unless miss the opportunity</h1>
-                            <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum velit temporibus repudiandae ipsa, eaque perspiciatis cumque incidunt tenetur sequi reiciendis.
+                            <h1 class="display-5 mb-4">Who are we and what do we do?</h1>
+                            <p class="mb-4">
+                                Whatever your IT needs may be—whether it's for your home or business—NextWave Technologies is here to help you navigate the 
+                                exciting world of technology with ease! From professional TV mounting and security camera installations to website maintenance 
+                                and remote assistance, we've got a wide range of services to take the stress off your plate. Curious to learn more? Feel free 
+                                to reach out and discover how we can support you!
                             </p>
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-6 col-xl-6">
@@ -131,7 +135,10 @@
                                         <div><i class="fas fa-lightbulb fa-3x text-primary"></i></div>
                                         <div class="ms-4">
                                             <h4>Business Consuluting</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                            <p>
+                                                Our IT consulting services provide expert guidance to help you optimize technology, streamline operations, 
+                                                and achieve your business goals with customized, forward-thinking solutions.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -139,20 +146,22 @@
                                     <div class="d-flex">
                                         <div><i class="bi bi-bookmark-heart-fill fa-3x text-primary"></i></div>
                                         <div class="ms-4">
-                                            <h4>Year Of Expertise</h4>
-                                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                            <h4>Reliable Support, Anytime, Anywhere</h4>
+                                            <p>
+                                                We are committed to traveling across the state to bring you affordable, reliable IT solutions wherever you are.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <a href="#" class="btn btn-primary rounded-pill py-3 px-5 flex-shrink-0">Discover Now</a>
+                                    <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 flex-shrink-0">Discover Now</a>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="d-flex">
                                         <i class="fas fa-phone-alt fa-2x text-primary me-4"></i>
                                         <div>
                                             <h4>Call Us</h4>
-                                            <p class="mb-0 fs-5" style="letter-spacing: 1px;">+01234567890</p>
+                                            <p class="mb-0 fs-5" style="letter-spacing: 1px;">+1(810)882-1776</p>
                                         </div>
                                     </div>
                                 </div>
@@ -161,16 +170,9 @@
                     </div>
                     <div class="col-xl-5 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded position-relative overflow-hidden">
-                            <img src="img/about-2.png" class="img-fluid rounded w-100" alt="">
-                            
-                            <div class="" style="position: absolute; top: -15px; right: -15px;">
-                                <img src="img/about-3.png" class="img-fluid" style="width: 150px; height: 150px; opacity: 0.7;" alt="">
-                            </div>
-                            <div class="" style="position: absolute; top: -20px; left: 10px; transform: rotate(90deg);">
-                                <img src="img/about-4.png" class="img-fluid" style="width: 100px; height: 150px; opacity: 0.9;" alt="">
-                            </div>
+                            <img src="img/IMG_0524.PNG" class="img-fluid rounded w-100" alt="">
                             <div class="rounded-bottom">
-                                <img src="img/about-5.jpg" class="img-fluid rounded-bottom w-100" alt="">
+                                <img src="img/a2.jpg" class="img-fluid rounded-bottom w-100" alt="">
                             </div>
                         </div>
                     </div>
@@ -183,9 +185,14 @@
         <div class="container-fluid feature pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Our Features</h4>
-                    <h1 class="display-5 mb-4">Connecting businesses, ideas, and people for greater impact.</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <h4 class="text-primary">Why Choose Us?</h4>
+                    <h1 class="display-5 mb-4">The Next Wave of IT</h1>
+                    <p class="mb-0">
+                        NextWave Technologies is the ideal choice for all your IT needs, whether residential or commercial. 
+                        They offer cutting-edge solutions tailored to your specific requirements, from smart home integration 
+                        and cybersecurity for homes to scalable, secure services for businesses. With expert support and a 
+                        focus on reliability and innovation, NextWave ensures your technology runs smoothly, allowing you to 
+                        focus on what matters most.
                     </p>
                 </div>
                 <div class="row g-4">
@@ -194,8 +201,12 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-chart-line fa-4x text-primary"></i>
                             </div>
-                            <h4>Global Management</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <h4>Small Buissness</h4>
+                            <p class="mb-4">
+                                As a small business ourselves, we understand the challenges and needs of other small businesses. 
+                                That's why we're dedicated to providing personalized IT support and solutions to help you grow 
+                                and succeed. We're here to offer the same care and attention to your technology as we would our 
+                                own, ensuring that your business has the tools it needs to thrive.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -205,8 +216,12 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-university fa-4x text-primary"></i>
                             </div>
-                            <h4>Corporate Banking</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <h4>Qualified Technitions</h4>
+                            <p class="mb-4">
+                                Our team is made up of qualified technicians with hands-on experience in the field. 
+                                Each member is passionate about IT and committed to delivering top-notch service. 
+                                With a strong desire to help businesses and individuals solve their tech challenges, 
+                                we bring both expertise and enthusiasm to every project we take on.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -217,7 +232,13 @@
                                 <i class="fas fa-file-alt fa-4x text-primary"></i>
                             </div>
                             <h4>Asset Management</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <p class="mb-4">
+                                We assist companies with asset management by helping you track and manage the phones, 
+                                computers, and other devices you provide to your employees. Our service includes inventory 
+                                tracking, device configuration, regular maintenance, and ensuring all assets are properly 
+                                secured and up-to-date. We help streamline the process, reduce the risk of loss or theft, 
+                                and ensure that your devices are always ready to support your team's productivity. Whether 
+                                you're managing a few devices or a large fleet, we make asset management simple and efficient.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -227,8 +248,15 @@
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-hand-holding-usd fa-4x text-primary"></i>
                             </div>
-                            <h4>Investment Bank</h4>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea hic laborum odit pariatur...
+                            <h4>Scalable Solutions</h4>
+                            <p class="mb-4">
+                                We offer scalable IT solutions designed to grow with your business. Whether you're 
+                                a startup or an established company, we tailor our services to fit your current needs 
+                                and seamlessly expand as your business evolves. From network infrastructure and cloud 
+                                services to security and support, our flexible solutions can scale up or down to match 
+                                your growth, ensuring that your technology always supports your goals without overextending 
+                                your budget. With us, you can be confident that your IT will keep pace with your business, 
+                                no matter where you’re headed.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
@@ -328,25 +356,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-4">
                         <div class="footer-item">
                             <a href="index.html" class="p-0">
-                                <h4 class="text-white"><i class="fas fa-search-dollar me-3"></i>Stocker</h4>
+                                <h4 class="text-white"><i class="fas fa-wave me-3"></i>NextWave Technologies</h4>
                                 <!-- <img src="img/logo.png" alt="Logo"> -->
                             </a>
-                            <p class="mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
+                            <p class="mb-4">The Next Wave of IT</p>
                             <div class="d-flex">
-                                <a href="#" class="bg-primary d-flex rounded align-items-center py-2 px-3 me-2">
-                                    <i class="fas fa-apple-alt text-white"></i>
-                                    <div class="ms-3">
-                                        <small class="text-white">Download on the</small>
-                                        <h6 class="text-white">App Store</h6>
-                                    </div>
-                                </a>
-                                <a href="#" class="bg-dark d-flex rounded align-items-center py-2 px-3 ms-2">
-                                    <i class="fas fa-play text-primary"></i>
-                                    <div class="ms-3">
-                                        <small class="text-white">Get it on</small>
-                                        <h6 class="text-white">Google Play</h6>
-                                    </div>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -354,22 +368,15 @@
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Feature</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Attractions</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Tickets</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Blog</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Privacy Policy</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Support</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Help</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
@@ -381,15 +388,15 @@
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
-                                <p class="text-white mb-0">info@example.com</p>
+                                <p class="text-white mb-0">thenextwaveit@gmail.com</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-phone-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">(+012) 3456 7890</p>
+                                <p class="text-white mb-0">(810) 882 1776</p>
                             </div>
                             <div class="d-flex align-items-center mb-4">
                                 <i class="fab fa-firefox-browser text-primary me-3"></i>
-                                <p class="text-white mb-0">Yoursite@ex.com</p>
+                                <p class="text-white mb-0">nextwaveit-admin.github.io</p>
                             </div>
                             <div class="d-flex">
                                 <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
