--- a/service.html
+++ b/service.html
@@ -119,7 +119,7 @@
         <div class="container-fluid service pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary">Our Services</h4>
+                    <h4 class="text-primary"></h4>
                     <h1 class="display-5 mb-4">We Services provided best offer</h1>
                     <p class="mb-0">
                         We offer a wide range of IT services, including network setup, cybersecurity, cloud solutions, 
