--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body"> For residential customers, we offer a wide range of services <code>.accordion-flush</code> to enhance their homes and tech experiences. 
+                                    <div class="accordion-body"> For residential customers, we offer a wide range of services <code></code> to enhance their homes and tech experiences. 
                                         This includes turning homes into smart homes, installing and wiring security cameras and systems, mounting TVs and sound systems, troubleshooting TV and computer 
                                         issues, and providing phone and tablet repairs. We also assist with social media account management and a variety of other tech-related needs. Whatever the tech 
                                         challenge, we’re here to help!
@@ -680,7 +680,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body"> Building your PC with us means getting personalized expertise <code>.accordion-flush</code> and a custom setup tailored to your needs. Whether 
+                                    <div class="accordion-body"> Building your PC with us means getting personalized expertise <code></code> and a custom setup tailored to your needs. Whether 
                                         you're gaming, video editing, or just need a high-performance workstation, we help you select the right components for maximum performance and reliability. We offer 
                                         professional assembly, cable management, and testing to ensure everything runs smoothly. Plus, we provide ongoing support for troubleshooting and upgrades, so your PC 
                                         continues to meet your evolving needs. With us, you're not just getting a PC; you're getting a system built for you.
@@ -694,7 +694,7 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body"> Yes, managed services can absolutely be tailored to fit <code>.accordion-flush</code> your specific needs. Whether you're a small business, a 
+                                    <div class="accordion-body"> Yes, managed services can absolutely be tailored to fit <code></code> your specific needs. Whether you're a small business, a 
                                         large enterprise, or a residential customer, we can customize our offerings to match your requirements. This includes selecting the right level of IT support, network 
                                         management, security, data backups, and other tech services. We work with you to understand your goals and challenges, then design a plan that provides the right mix 
                                         of proactive monitoring, troubleshooting, and maintenance. Tailored managed services ensure you only pay for what you need, while also giving you the flexibility to 
