--- a/about.html
+++ b/about.html
@@ -198,12 +198,12 @@
                     </p>
                 </div>
                 <div class="row g-4">
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="feature-item p-4">
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-chart-line fa-4x text-primary"></i>
                             </div>
-                            <h4>Small Buissness</h4>
+                            <h4>Small Business</h4>
                             <p class="mb-4">
                                 As a small business ourselves, we understand the challenges and needs of other small businesses. 
                                 That's why we're dedicated to providing personalized IT support and solutions to help you grow 
@@ -213,12 +213,12 @@
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="feature-item p-4">
                             <div class="feature-icon p-4 mb-4">
                                 <i class="fas fa-university fa-4x text-primary"></i>
                             </div>
-                            <h4>Qualified Technitions</h4>
+                            <h4>Qualified Technicians</h4>
                             <p class="mb-4">
                                 Our team is made up of qualified technicians with hands-on experience in the field. 
                                 Each member is passionate about IT and committed to delivering top-notch service. 
@@ -228,45 +228,40 @@
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
+                </div>
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="feature-item p-4">
                             <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-file-alt fa-4x text-primary"></i>
+                                <i class="fas fa-chart-line fa-4x text-primary"></i>
                             </div>
-                            <h4>Asset Management</h4>
+                            <h4>Small Business</h4>
                             <p class="mb-4">
-                                We assist companies with asset management by helping you track and manage the phones, 
-                                computers, and other devices you provide to your employees. Our service includes inventory 
-                                tracking, device configuration, regular maintenance, and ensuring all assets are properly 
-                                secured and up-to-date. We help streamline the process, reduce the risk of loss or theft, 
-                                and ensure that your devices are always ready to support your team's productivity. Whether 
-                                you're managing a few devices or a large fleet, we make asset management simple and efficient.
+                                As a small business ourselves, we understand the challenges and needs of other small businesses. 
+                                That's why we're dedicated to providing personalized IT support and solutions to help you grow 
+                                and succeed. We're here to offer the same care and attention to your technology as we would our 
+                                own, ensuring that your business has the tools it needs to thrive.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="col-md-6 col-lg-6 col-xl-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="feature-item p-4">
                             <div class="feature-icon p-4 mb-4">
-                                <i class="fas fa-hand-holding-usd fa-4x text-primary"></i>
+                                <i class="fas fa-university fa-4x text-primary"></i>
                             </div>
-                            <h4>Scalable Solutions</h4>
+                            <h4>Qualified Technicians</h4>
                             <p class="mb-4">
-                                We offer scalable IT solutions designed to grow with your business. Whether you're 
-                                a startup or an established company, we tailor our services to fit your current needs 
-                                and seamlessly expand as your business evolves. From network infrastructure and cloud 
-                                services to security and support, our flexible solutions can scale up or down to match 
-                                your growth, ensuring that your technology always supports your goals without overextending 
-                                your budget. With us, you can be confident that your IT will keep pace with your business, 
-                                no matter where you’re headed.
+                                Our team is made up of qualified technicians with hands-on experience in the field. 
+                                Each member is passionate about IT and committed to delivering top-notch service. 
+                                With a strong desire to help businesses and individuals solve their tech challenges, 
+                                we bring both expertise and enthusiasm to every project we take on.
                             </p>
                             <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <!-- Features End -->
+
 
         <!-- Testimonial Start -->
         <div class="container-fluid testimonial pb-5">
