--- a/about.html
+++ b/about.html
@@ -264,6 +264,9 @@
                     </div>
                 </div>
                 <br>
+            </div>
+            <br>
+        </div>
         <!-- Features End -->
 
         <!-- Testimonial Start -->
