--- a/index.html
+++ b/index.html
@@ -975,16 +975,16 @@
                     <div class="col-md-6 col-lg-6 col-xl-2">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="/about.html"><i class="fas fa-angle-right me-2"></i> About Us</a>
+                            <a href="/contact.html"><i class="fas fa-angle-right me-2"></i> Contact us</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ</a>
+                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
+                            <a href="/FAQ.html"><i class="fas fa-angle-right me-2"></i> FAQ</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
