--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
     <head>
         <meta charset="utf-8">
-        <title>NextWave Technologies</title>
+        <title><link rel="icon" href="i2.png" type="image/x-icon" />NextWave Technologies</title>
         <!-- add icon link -->
-        <link rel="icon" href="i2.png" type="image/x-icon" />
+        
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
