--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="i2.png" type="image/x-icon" />
+        <link rel="icon" href="/img/i2.png" type="image/x-icon" />
         <title>NextWave Technologies</title>
         <!-- add icon link -->
         
