buttons go somewhere!

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     IT operations so you can focus on what matters most—growing your business. With expert management, enhanced 
                                     security, and 24/7 support, we ensure your technology is always performing at its best.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                     smoothly and seamlessly. With friendly, reliable service, we make technology work 
                                     for you—so you can enjoy a smarter, more connected home.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -303,7 +303,7 @@
                                     risks. With our expert support, your company can rely on fast, secure, and scalable technology 
                                     to drive success and growth.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                                     technicians provide quality repairs using high-grade parts. We offer affordable solutions to 
                                     get your devices working like new—so you can stay connected without the hassle.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -340,7 +340,7 @@
                                     to troubleshooting and software fixes. With top-quality components and skilled service, we 
                                     ensure your devices perform at their best.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                                     to keep your business ahead of the curve. With our guidance, you’ll make smarter 
                                     technology decisions that support your long-term goals.
                                 </p>
-                                <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -396,7 +396,7 @@
                                 and succeed. We're here to offer the same care and attention to your technology as we would our 
                                 own, ensuring that your business has the tools it needs to thrive.
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="about.html">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
@@ -411,7 +411,7 @@
                                 With a strong desire to help businesses and individuals solve their tech challenges, 
                                 we bring both expertise and enthusiasm to every project we take on.
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="about.html">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
@@ -428,7 +428,7 @@
                                 and ensure that your devices are always ready to support your team's productivity. Whether 
                                 you're managing a few devices or a large fleet, we make asset management simple and efficient.
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="about.html">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
@@ -446,7 +446,7 @@
                                 your budget. With us, you can be confident that your IT will keep pace with your business, 
                                 no matter where you’re headed.
                             </p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                            <a class="btn btn-primary rounded-pill py-2 px-4" href="about.html">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -497,7 +497,7 @@
                                             For just $9.99 per workstation, you’ll receive remote monitoring, antivirus protection, 
                                             and access to our 24/7 email support line to submit tickets for any issues.
                                         </p>
-                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -513,7 +513,7 @@
                                             24/7 email support line, plus free user additions and removals in your environment. This plan 
                                             also includes either spam email filtering or phishing training to enhance your security.
                                         </p>
-                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -530,7 +530,7 @@
                                             training. This plan also includes quarterly security audits, with an on-site visit four times a year 
                                             to ensure your systems are fully optimized and secure.
                                         </p>
-                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -549,7 +549,7 @@
                                             compliant. Additionally, all remote support is completely free, giving you peace of mind knowing 
                                             help is just a call or click away.
                                         </p>
-                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Learn More</a>
+                                        <a class="btn btn-primary rounded-pill py-2 px-4" href="service.html">Learn More</a>
                                     </div>
                                 </div>
                             </div>
