--- a/index.html
+++ b/index.html
@@ -714,7 +714,10 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                    <div class="accordion-body">
+                                        No, our contracts are month-to-month. You simply pay for the month upfront, and you're not locked into a long-term commitment. 
+                                        This gives you the flexibility to adjust your services as your business needs change without the pressure of a fixed-term contract.
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -724,7 +727,11 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                    <div class="accordion-body">
+                                        Asset management is the process of tracking and managing an organization's physical and digital assets, such as hardware, software, and equipment. 
+                                        It involves maintaining records of who is assigned specific equipment, the condition of each asset, and ensuring that assets are up-to-date and properly maintained. 
+                                        This helps in optimizing asset usage, improving security, and ensuring compliance with regulations.
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item rounded-bottom">
@@ -734,7 +741,12 @@
                                     </button>
                                 </h2>
                                 <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                                    <div class="accordion-body">
+                                        We’ve made it easy for you to submit a support ticket whenever you need assistance. You can simply submit a ticket online 
+                                        through our website. Alternatively, you can send us an email at thenextwaveit@gmail.com, or call our support line at 
+                                        810-882-1776 to speak directly with a representative. If you're a managed client, you can also use your personalized 
+                                        client portal to submit and track support requests quickly and efficiently.
+                                    </div>
                                 </div>
                             </div>
                         </div>
